[tool.poetry]
name = "roadtrip"
version = "0.1.0"
description = ""
authors = ["shearere2 <shearere2@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
pandas = "^2.2.2"
seaborn = "^0.13.2"
django-db = "^0.0.7"
gmaps = "^0.9.0"
geopandas = "^1.0.1"
plotly = "^5.22.0"
plotly-express = "^0.4.1"
shp = "^1.0.2"
pyshp = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
